compilation.txt
security/mp2/mp2.c: In function ‘get_inode_sid’:
security/mp2/mp2.c:27:20: warning: passing argument 1 of ‘vfs_getattr’ from incompatible pointer type [-Wincompatible-pointer-types]
  ret = vfs_getattr(inode, XATTR_NAME_MP2, xattr_value, sizeof(xattr_value) - 1)
                    ^
In file included from security/mp2/mp2_given.h:5:0,
                 from security/mp2/mp2.c:12:
include/linux/fs.h:2750:12: note: expected ‘struct path *’ but argument is of type ‘struct inode *’
 extern int vfs_getattr(struct path *, struct kstat *);
            ^
In file included from include/linux/xattr.h:17:0,
                 from security/mp2/mp2.c:10:
include/uapi/linux/xattr.h:33:31: warning: passing argument 2 of ‘vfs_getattr’ from incompatible pointer type [-Wincompatible-pointer-types]
 #define XATTR_SECURITY_PREFIX "security."
                               ^
security/mp2/mp2_given.h:9:24: note: in expansion of macro ‘XATTR_SECURITY_PREFIX’
 #define XATTR_NAME_MP2 XATTR_SECURITY_PREFIX XATTR_MP2_SUFFIX
                        ^
security/mp2/mp2.c:27:27: note: in expansion of macro ‘XATTR_NAME_MP2’
  ret = vfs_getattr(inode, XATTR_NAME_MP2, xattr_value, sizeof(xattr_value) - 1)
                           ^
In file included from security/mp2/mp2_given.h:5:0,
                 from security/mp2/mp2.c:12:
include/linux/fs.h:2750:12: note: expected ‘struct kstat *’ but argument is of type ‘char *’
 extern int vfs_getattr(struct path *, struct kstat *);
            ^
security/mp2/mp2.c:27:8: error: too many arguments to function ‘vfs_getattr’
  ret = vfs_getattr(inode, XATTR_NAME_MP2, xattr_value, sizeof(xattr_value) - 1)
        ^
In file included from security/mp2/mp2_given.h:5:0,
                 from security/mp2/mp2.c:12:
include/linux/fs.h:2750:12: note: declared here
 extern int vfs_getattr(struct path *, struct kstat *);
            ^
security/mp2/mp2.c: In function ‘mp2_bprm_set_creds’:
security/mp2/mp2.c:62:20: warning: passing argument 1 of ‘vfs_getattr’ from incompatible pointer type [-Wincompatible-pointer-types]
  ret = vfs_getattr(dentry, XATTR_NAME_MP2, xattr_value, XATTR_SIZE_MAX);
                    ^
In file included from security/mp2/mp2_given.h:5:0,
                 from security/mp2/mp2.c:12:
include/linux/fs.h:2750:12: note: expected ‘struct path *’ but argument is of type ‘struct dentry *’
 extern int vfs_getattr(struct path *, struct kstat *);
            ^
In file included from include/linux/xattr.h:17:0,
                 from security/mp2/mp2.c:10:
include/uapi/linux/xattr.h:33:31: warning: passing argument 2 of ‘vfs_getattr’ from incompatible pointer type [-Wincompatible-pointer-types]
 #define XATTR_SECURITY_PREFIX "security."
                               ^
security/mp2/mp2_given.h:9:24: note: in expansion of macro ‘XATTR_SECURITY_PREFIX’
 #define XATTR_NAME_MP2 XATTR_SECURITY_PREFIX XATTR_MP2_SUFFIX
                        ^
security/mp2/mp2.c:62:28: note: in expansion of macro ‘XATTR_NAME_MP2’
  ret = vfs_getattr(dentry, XATTR_NAME_MP2, xattr_value, XATTR_SIZE_MAX);
                            ^
In file included from security/mp2/mp2_given.h:5:0,
                 from security/mp2/mp2.c:12:
include/linux/fs.h:2750:12: note: expected ‘struct kstat *’ but argument is of type ‘char *’
 extern int vfs_getattr(struct path *, struct kstat *);
            ^
security/mp2/mp2.c:62:8: error: too many arguments to function ‘vfs_getattr’
  ret = vfs_getattr(dentry, XATTR_NAME_MP2, xattr_value, XATTR_SIZE_MAX);
        ^
In file included from security/mp2/mp2_given.h:5:0,
                 from security/mp2/mp2.c:12:
include/linux/fs.h:2750:12: note: declared here
 extern int vfs_getattr(struct path *, struct kstat *);
            ^
security/mp2/mp2.c: In function ‘mp2_cred_alloc_blank’:
security/mp2/mp2.c:107:9: error: ‘struct mp2_security’ has no member named ‘label’
     tsec->label = MP2_NO_ACCESS;
         ^
security/mp2/mp2.c: In function ‘mp2_cred_prepare’:
security/mp2/mp2.c:154:13: error: ‘struct mp2_security’ has no member named ‘label’
     new_tsec->label = old_tsec->label;
             ^
security/mp2/mp2.c:154:31: error: ‘struct mp2_security’ has no member named ‘label’
     new_tsec->label = old_tsec->label;
                               ^
In file included from include/linux/slab.h:14:0,
                 from include/linux/security.h:27,
                 from include/linux/lsm_hooks.h:27,
                 from security/mp2/mp2.c:3:
security/mp2/mp2.c: In function ‘mp2_inode_permission’:
include/linux/gfp.h:238:20: warning: passing argument 2 of ‘dentry_path_raw’ makes pointer from integer without a cast [-Wint-conversion]
 #define GFP_KERNEL (__GFP_RECLAIM | __GFP_IO | __GFP_FS)
                    ^
security/mp2/mp2.c:268:37: note: in expansion of macro ‘GFP_KERNEL’
  dir_path = dentry_path_raw(dentry, GFP_KERNEL); // path of the inode
                                     ^
In file included from security/mp2/mp2.c:8:0:
include/linux/dcache.h:337:14: note: expected ‘char *’ but argument is of type ‘unsigned int’
 extern char *dentry_path_raw(struct dentry *, char *, int);
              ^
security/mp2/mp2.c:268:13: error: too few arguments to function ‘dentry_path_raw’
  dir_path = dentry_path_raw(dentry, GFP_KERNEL); // path of the inode
             ^
In file included from security/mp2/mp2.c:8:0:
include/linux/dcache.h:337:14: note: declared here
 extern char *dentry_path_raw(struct dentry *, char *, int);
              ^
security/mp2/mp2.c:279:2: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
  struct mp2_security *tsec = current_cred()->security;
  ^
security/mp2/mp2.c:297:5: error: expected ‘;’ before ‘}’ token
     }
     ^
scripts/Makefile.build:258: recipe for target 'security/mp2/mp2.o' failed
make[2]: *** [security/mp2/mp2.o] Error 1
scripts/Makefile.build:403: recipe for target 'security/mp2' failed
make[1]: *** [security/mp2] Error 2
Makefile:943: recipe for target 'security' failed
make: *** [security] Error 2
make: *** Waiting for unfinished jobs....
